fix(styles): Update autofill color for better visibility

--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -102,6 +102,6 @@
 .baseField input:-webkit-autofill:hover,
 .baseField input:-webkit-autofill:focus,
 .baseField input:-webkit-autofill:active {
-    -webkit-box-shadow: 0 0 0 30px #ffffff inset !important;
+    -webkit-box-shadow: 0 0 0 30px #e9e9e9 inset !important;
     -webkit-text-fill-color: #1a1a1a !important;
 }
